@@ -1,11 +1,11 @@
 /*
- *    Copyright 2009-2022 the original author or authors.
+ *    Copyright 2009-2012 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
  *    You may obtain a copy of the License at
  *
- *       https://www.apache.org/licenses/LICENSE-2.0
+ *       http://www.apache.org/licenses/LICENSE-2.0
  *
  *    Unless required by applicable law or agreed to in writing, software
  *    distributed under the License is distributed on an "AS IS" BASIS,
@@ -15,70 +15,34 @@
  */
 package org.apache.ibatis.type;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
 
-class DoubleTypeHandlerTest extends BaseTypeHandlerTest {
+public class DoubleTypeHandlerTest extends BaseTypeHandlerTest {
 
-  private static final TypeHandler<Double> TYPE_HANDLER = new DoubleTypeHandler();
+    private static final TypeHandler<Double> TYPE_HANDLER = new DoubleTypeHandler();
 
-  @Override
-  @Test
-  public void shouldSetParameter() throws Exception {
-    TYPE_HANDLER.setParameter(ps, 1, 100d, null);
-    verify(ps).setDouble(1, 100d);
-  }
+    @Test
+    public void shouldSetParameter() throws Exception {
+        TYPE_HANDLER.setParameter(ps, 1, 100d, null);
+        verify(ps).setDouble(1, 100d);
+    }
 
-  @Override
-  @Test
-  public void shouldGetResultFromResultSetByName() throws Exception {
-    when(rs.getDouble("column")).thenReturn(100d, 0d);
-    assertEquals(Double.valueOf(100d), TYPE_HANDLER.getResult(rs, "column"));
-    assertEquals(Double.valueOf(0d), TYPE_HANDLER.getResult(rs, "column"));
-  }
+    @Test
+    public void shouldGetResultFromResultSet() throws Exception {
+        when(rs.getDouble("column")).thenReturn(100d);
+        when(rs.wasNull()).thenReturn(false);
+        assertEquals(new Double(100d), TYPE_HANDLER.getResult(rs, "column"));
+    }
 
-  @Override
-  @Test
-  public void shouldGetResultNullFromResultSetByName() throws Exception {
-    when(rs.getDouble("column")).thenReturn(0d);
-    when(rs.wasNull()).thenReturn(true);
-    assertNull(TYPE_HANDLER.getResult(rs, "column"));
-  }
-
-  @Override
-  @Test
-  public void shouldGetResultFromResultSetByPosition() throws Exception {
-    when(rs.getDouble(1)).thenReturn(100d, 0d);
-    assertEquals(Double.valueOf(100d), TYPE_HANDLER.getResult(rs, 1));
-    assertEquals(Double.valueOf(0d), TYPE_HANDLER.getResult(rs, 1));
-  }
-
-  @Override
-  @Test
-  public void shouldGetResultNullFromResultSetByPosition() throws Exception {
-    when(rs.getDouble(1)).thenReturn(0d);
-    when(rs.wasNull()).thenReturn(true);
-    assertNull(TYPE_HANDLER.getResult(rs, 1));
-  }
-
-  @Override
-  @Test
-  public void shouldGetResultFromCallableStatement() throws Exception {
-    when(cs.getDouble(1)).thenReturn(100d, 0d);
-    assertEquals(Double.valueOf(100d), TYPE_HANDLER.getResult(cs, 1));
-    assertEquals(Double.valueOf(0d), TYPE_HANDLER.getResult(cs, 1));
-  }
-
-  @Override
-  @Test
-  public void shouldGetResultNullFromCallableStatement() throws Exception {
-    when(cs.getDouble(1)).thenReturn(0d);
-    when(cs.wasNull()).thenReturn(true);
-    assertNull(TYPE_HANDLER.getResult(cs, 1));
-  }
+    @Test
+    public void shouldGetResultFromCallableStatement() throws Exception {
+        when(cs.getDouble(1)).thenReturn(100d);
+        when(cs.wasNull()).thenReturn(false);
+        assertEquals(new Double(100d), TYPE_HANDLER.getResult(cs, 1));
+    }
 
 }
